# OpsMind_AI

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/ai-runtime/: .env.example  Dockerfile  README.md  pyproject.toml
services/ai-runtime/src/opsmind_ai_runtime/: __init__.py  main.py
services/ai-runtime/src/opsmind_ai_runtime/adapters/: __init__.py
services/ai-runtime/src/opsmind_ai_runtime/api/: body_limit.py  problem_details.py
services/ai-runtime/src/opsmind_ai_runtime/application/: __init__.py  admission_gate.py  analysis_service.py  budget_guard.py  delegated_capability.py  egress_policy.py  provider_gateway.py  rsa_jwks_capability.py  rsa_jwks_parser.py  runtime_state.py  tenant_egress_policy.py
services/ai-runtime/src/opsmind_ai_runtime/config/: __init__.py  settings.py
services/ai-runtime/src/opsmind_ai_runtime/domain/: __init__.py  analysis_contracts.py
services/ai-runtime/src/opsmind_ai_runtime/providers/: __init__.py
services/ai-runtime/tests/: test_health.py
services/ai-runtime/tests/contract/: test_analysis_endpoint.py  test_canonical_fixtures.py  test_canonical_json_schema_alignment.py  test_request_body_limit.py
services/ai-runtime/tests/integration/: test_postgres_runtime_state.py
services/ai-runtime/tests/unit/: test_analysis_contracts.py  test_analysis_service.py  test_budget_guard.py  test_delegated_capability.py  test_egress_policy.py  test_rsa_jwks_capability.py  test_settings.py
(+673 files in other folders)
